--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ionic/react": "^8.3.4",
     "@react-google-maps/api": "^2.20.3",
     "aos": "^2.3.4",
+    "boxicons": "^2.1.4",
     "ionicons": "^7.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,4 +38,6 @@
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.9"
   }
+ 
+
 }
