--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@ionic/react": "^8.3.4",
     "@react-google-maps/api": "^2.20.3",
     "aos": "^2.3.4",
